@@ -91,4 +91,17 @@ public class SolrQueryTimeoutImpl implements QueryTimeout {
   public String toString() {
     return "timeoutAt: " + getTimeoutAtNs() + " (System.nanoTime(): " + nanoTime() + ")";
   }
+
+  /** Internal impl for speed only used when we know there's a timeout enabled. */
+  QueryTimeout makeLocalImpl() {
+    assert isTimeoutEnabled();
+    return new QueryTimeout() {
+      final long timeoutAt = getTimeoutAtNs();
+
+      @Override
+      public boolean shouldExit() {
+        return timeoutAt - nanoTime() < 0L;
+      }
+    };
+  }
 }
