@@ -45,6 +45,8 @@ Optimizations
   Solr can also be started with the system property `solr.http.disableCookies` set to `true`, so that the internal clients
   that Solr uses to communicate between nodes use `HttpCookieStore.Empty`. (Tomás Fernández Löbbe)
 
+* SOLR-16693: For query timeAllowed, switch from ExitableDirectoryReader to TimeLimitingBulkScorer (David Smiley)
+
 Bug Fixes
 ---------------------
 
